# sovereignchain

./: CONTRIBUTING.md  LICENSE  LICENSE-HSP  README.md  SECURITY.md
launch/: INDIEHACKERS_MILESTONE.md  LINKEDIN_POST.md  RELEASE_NOTES.md  SHOW_HN.md  SHOW_HN_FINAL.md  SHOW_HN_v0.1.1.md  TWITTER_THREAD.md
quorum/: .dockerignore.bak3  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.bak2  Dockerfile.bak4  README.md  ROADMAP.md  pyproject.toml
quorum-vscode/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.js  package-lock.json  package.json  quorum-vscode-0.1.0.vsix  tsconfig.json
quorum-vscode/src/: commands.ts  extension.ts  quorumClient.ts  quorumPanel.ts  statusBar.ts
quorum-vscode/src/__test__/: quorumClient.test.ts
quorum/deploy/: cloudrun.yaml
quorum/docs/: AUDIT_FINDINGS_v0.1.2.md  AUDIT_FINDINGS_v0.1.4.md  AUDIT_FINDINGS_v0.1.5.md  CONTEXT_PROFILES.md  HSP_BLACK_BOX.md  MCP_SERVER.md  POSTMORTEM_v0.1.0_deploy.md  SELF_EVAL_2026-06-17.json  SELF_EVOLUTION_PIPELINE.md
quorum/landing/: README.md  index.html
quorum/scripts/: README.md  smoke_test_docker.sh
quorum/scripts/quorum-research-mode/: README.md  genetic_prompts.py  lora_finetune_setup.py
quorum/scripts/quorum-self-modify/: auto_heal.py  self_modify.py
quorum/src/quorum/: __init__.py  _license.py  _local_mode.py  cli.py  cli_eval.py  cli_responses.py  context.py  customer_keys.py  doctor.py  firestore_stores.py  testing.py  verifier_api.py
quorum/src/quorum/agents/: draft_verifier.py  drafts.py  fact_sheet.py  verifier_store.py
quorum/src/quorum/billing/: __init__.py  email_sender.py  stripe_billing.py  trial_emails.py
quorum/src/quorum/core/: __init__.py  consensus.py  embeddings.py  hallucination_risk.py  identity.py  memory.py  refusal_filter.py
quorum/src/quorum/evolution/: ab_testing.py  adversarial.py  architecture_search.py  auto_feedback.py  competition.py  distillation.py  diversity.py  eval_runner.py  eval_set.py  federated.py  feedback_cli.py  hebbian.py  kb_harvest_fallback.py  memory_loop.py  meta.py  overnight.py  response_log.py  rlhf.py  router.py  self_prompt.py  synthetic_data.py
quorum/src/quorum/hsp/: __init__.py  ai_act_cert.py  audit_cli.py  black_box.py  gate.py  webhook.py
quorum/src/quorum/mcp/: __init__.py  server.py
quorum/src/quorum/proactive/: __init__.py  analyst.py  enricher.py  ingest.py  notifier.py  runner.py  scorer.py  signal.py  store.py
quorum/src/quorum/providers/: __init__.py  anthropic.py  base.py  claude_cli.py  cohere.py  deepseek.py  gemini.py  grok.py  mistral.py  moonshot.py  nvidia.py  ollama.py  openai.py  qwen.py  registry.py  replicate.py  zhipu.py
quorum/src/quorum/server/: __init__.py  main.py
quorum/src/quorum/web/: multi_source.py  search.py
quorum/tests/: conftest.py  test_auto_heal_local.py  test_cli_eval.py  test_cli_responses.py  test_consensus.py  test_hallucination_risk.py  test_trial_emails.py
quorum/tests/agents/: test_fact_sheet_and_verifier.py  test_regenerate_loop.py
quorum/tests/evolution/: test_ab_testing.py  test_adversarial.py  test_auto_feedback.py  test_competition.py  test_distillation_bridge.py  test_distillation_collect.py  test_distillation_finetune.py  test_distillation_nightly.py  test_distillation_promote.py  test_diversity.py  test_eval_runner.py  test_eval_set.py  test_hebbian.py  test_kb_harvest_fallback.py  test_meta.py  test_response_log.py  test_self_prompt.py  test_synthetic_data.py
quorum/tests/hsp/: test_black_box.py
quorum/tests/providers/: test_cohere.py  test_grok.py  test_mistral.py
