[project]
name = "quorum-ai"
version = "0.1.5"
description = "Multi-LLM consensus engine with semantic agreement and self-evolution"
authors = [{ name = "Jaqueline Martins", email = "jaqueline@hsp-protocol.com" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["llm", "consensus", "multi-model", "ai", "orchestration", "ensemble"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "numpy>=1.26",
    "rich>=13.7",
    "typer>=0.12",
    "reportlab>=4.2",
    "stripe>=10.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "slowapi>=0.1.9",
    "cryptography>=42.0",
    "google-cloud-firestore>=2.16",
]

[project.optional-dependencies]
providers = [
    "anthropic>=0.30",
    "google-generativeai>=0.7",
    "openai>=1.30",
    "replicate>=0.32",
]
storage = ["aiosqlite>=0.20"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]
all = ["quorum-ai[providers,storage,dev]"]

[project.scripts]
quorum = "quorum.cli:app"
quorum-server = "quorum.server.main:run"
quorum-feedback = "quorum.evolution.feedback_cli:app"

[project.urls]
Homepage = "https://github.com/jaquelinejaque/sovereignchain"
Repository = "https://github.com/jaquelinejaque/sovereignchain"
Issues = "https://github.com/jaquelinejaque/sovereignchain/issues"
"HSP Patent" = "https://github.com/jaquelinejaque/hsp-protocol"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quorum"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
